# angelmortal

./: .gitignore  Dockerfile  bot.py  chat-angel.py  chat-mortal.py  chat.py  docker-compose.yml  messenger.py  pyproject.toml  receive.py  redis-pub.py  redis-test.py  requirements.txt  send.py  sortinghat.py  stats.py  telebot.yaml  telebot_secret.yaml  wayyan.yaml
redis/: dump.rdb
